fix: fixed bug about alignment on mobile

--- a/src/components/organisms/Footer/Footer.scss
+++ b/src/components/organisms/Footer/Footer.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   width: 100%;
   min-width: 320px;
@@ -19,6 +19,7 @@
 
   @include mix.on-tablet {
     flex-direction: row;
+    align-items: center;
     width: 100%;
     height: 96px;
     padding: 32px 152px;
@@ -57,5 +58,7 @@
 
   &__top-button {
     @extend %buttons;
+
+    align-self: center;
   }
 }
